# flask-rings

./: .gitignore  MANIFEST.in  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: publish_to_pypi.yml  tests.yml
docs/source/: basic.rst  conf.py  index.rst  macros.rst
docs/source/_build/html/: .buildinfo  basic.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/source/_build/html/.doctrees/: basic.doctree  environment.pickle  index.doctree
docs/source/_build/html/_sources/: basic.rst.txt  index.rst.txt
example/: app.py
example/templates/: base.html  index.html  result.html
flask_rings/: __init__.py
flask_rings/static/css/: rings.min.css
flask_rings/templates/rings/: nav.html  utils.html  wtf.html
tests/: conftest.py  test_render.py  test_rings.py
