[tool.poetry]
name = "flask-rings"
version = "0.1.0"
description = "Rings helper for flask"
authors = ["andyzhou <zhoutianyou11@gmail.com>"]
license = "LGPL-3.0"

[tool.poetry.dependencies]
python = "3.6, 3.7, 3.8, 3.9"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
